<?xml version="1.0"?>
<package format="2">
  <name>whac_lidar</name>
  <version>0.0.0</version>
  <description>The lidar package</description>

  <maintainer email="tscherli@andrew.cmu.edu">Tom Scherlis</maintainer>
  <author email="tscherli@andrew.cmu.edu">Tom Scherlis</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_runtime</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <depend>nav_msgs</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
