<package format="2">
  <name>ORB_SLAM2</name>	
  <version>1.0.0</version>
  <description> ORB_SLAM2
  </description>
  <author>Raul Mur-Artal</author>
  <maintainer email="matthew54213@gmail.com">Matthew de Soto</maintainer>
  <license>GPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>pangolin</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslint</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>  
  <exec_depend>roscpp</exec_depend>
  <depend>tf</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>rosconsole</depend>
  <depend>message_filters></depend>

</package>



